--- a/assets/featured-product.css
+++ b/assets/featured-product.css
@@ -313,8 +313,8 @@
     display: block;
     width: 100%;
     height: 100%;
-    -o-object-fit: cover;
-    object-fit: cover
+    -o-object-fit: contain;
+    object-fit: contain
 }
 
 .product_slider {
