--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -8,8 +8,26 @@
         <div class="header__in">
             <div class="header__row">
                 <div class="header__logo_wrap">
-                    <a class="header__logo" href="#">
-                        <img src="./img/logo.svg" alt="logo" class="header__logo_img">
+                    <a class="header__logo" href="{{ routes.root_url }}">
+                        {%- if settings.logo != blank -%}
+                            <div class="header__heading-logo-wrapper">
+                                {%- assign logo_alt = settings.logo.alt | default: shop.name | escape -%}
+                                {%- assign logo_height = settings.logo_width | divided_by: settings.logo.aspect_ratio -%}
+                                {% capture sizes %}(max-width: {{ settings.logo_width | times: 2 }}px) 50vw, {{ settings.logo_width }}px{% endcapture %}
+                                {% capture widths %}{{ settings.logo_width }}, {{ settings.logo_width | times: 1.5 | round }}, {{ settings.logo_width | times: 2 }}{% endcapture %}
+                                {{ settings.logo | image_url: width: 600 | image_tag:
+                                class: 'header__logo_img',
+                                widths: widths,
+                                height: logo_height,
+                                width: settings.logo_width,
+                                alt: logo_alt,
+                                sizes: sizes,
+                                preload: true
+                                }}
+                            </div>
+                        {%- else -%}
+                            <span class="header__logo_text">{{ shop.name }}</span>
+                        {%- endif -%}
                     </a>
                 </div>
                 <nav class="header__nav">
